# hidemaru-editor

./: Cargo.toml  build_log.txt  build_log_derive.txt
src/: find_dialog.rs  main.rs  replace_dialog.rs  text_engine.rs
