[package]
name = "hidemaru_clone"
version = "0.1.0"
edition = "2021"

[dependencies]
native-windows-gui = { version = "1.0.13", features = ["status-bar", "file-dialog", "textbox", "menu", "notice", "timer", "tooltip", "listbox", "rich-textbox", "tabs"] }
native-windows-derive = "1.0.5"
ropey = "1.6"
encoding_rs = "0.8"
regex = "1.10"
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "commctrl"] }
